layout bug fix

--- a/packages/magda-web/src/Search/SearchBox.css
+++ b/packages/magda-web/src/Search/SearchBox.css
@@ -1,7 +1,3 @@
-.search-box{
-  padding: 0;
-}
-
 .search-box input {
   height: 40px;
 	border-radius: 1px;
